[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://Images/UI/restart.png" type="Texture" id=2]
[ext_resource path="res://Images/UI/gameover.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/quit.png" type="Texture" id=4]
[ext_resource path="res://Sons/UI/tragedy.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.0745098, 0.0823529, 0.490196 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.199219, 0.0560303, 0.0560303, 1 )

[node name="GameOverScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="UI" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 540.0
margin_bottom = 640.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Elements" type="VBoxContainer" parent="UI/Margin"]
margin_left = 50.0
margin_top = 50.0
margin_right = 480.0
margin_bottom = 580.0
custom_constants/separation = 100

[node name="CenterTitle" type="CenterContainer" parent="UI/Margin/Elements"]
margin_right = 430.0
margin_bottom = 172.0

[node name="GameOver" type="TextureRect" parent="UI/Margin/Elements/CenterTitle"]
margin_left = 10.0
margin_right = 420.0
margin_bottom = 172.0
texture = ExtResource( 3 )

[node name="Buttons" type="VBoxContainer" parent="UI/Margin/Elements"]
margin_top = 272.0
margin_right = 430.0
margin_bottom = 499.0
custom_constants/separation = 0

[node name="CenterRestart" type="CenterContainer" parent="UI/Margin/Elements/Buttons"]
margin_right = 430.0
margin_bottom = 110.0

[node name="Restart" type="Button" parent="UI/Margin/Elements/Buttons/CenterRestart"]
margin_left = 89.0
margin_right = 340.0
margin_bottom = 110.0
icon = ExtResource( 2 )
flat = true

[node name="CenterQuit" type="CenterContainer" parent="UI/Margin/Elements/Buttons"]
margin_top = 110.0
margin_right = 430.0
margin_bottom = 227.0

[node name="Quit" type="Button" parent="UI/Margin/Elements/Buttons/CenterQuit"]
margin_left = 104.0
margin_right = 326.0
margin_bottom = 117.0
icon = ExtResource( 4 )
flat = true

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 275, 325 )
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.5

[connection signal="pressed" from="UI/Margin/Elements/Buttons/CenterRestart/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Margin/Elements/Buttons/CenterQuit/Quit" to="." method="_on_Quit_pressed"]
